# minirt

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  ados.rt  basic.rt  box.rt  cylindre.rt  cylindre2.rt  docker-compose.yml  main.c  miniRT  multiobject.rt  multiobject2.rt  multispot.rt  overlap.rt  overlap_2.rt  second_scene.rt  single-lighter.rt  single.rt  start_dev.sh  steoan.rt  test1.rt
include/: debug.h  external.h  minirt.h  mlx_utils.h  vec.h
libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
mlx/: mlx.h
parser_test_scenes/: bad_brightness.rt  bad_rgb.rt
src/: colors.c  exit.c  ft_spacious.c  init.c  moves.c  object.c  object_fill.c  objects.c  parser.c  parser_utils.c  process_objects.c  ray.c  scene.c  shader.c  validate.c  validate_objects.c  validate_params.c  window.c
src/helpers/: o_bags.c  print_objects.c
src/parser/: object.c  object_fill.c  parser.c  parser_checks.c  scene.c
src/vec/: cy_utils.c  ray.c  t_vec_new.c  t_vec_ops.c  t_vec_products.c
tests/: CMakeLists.txt  main.cpp  vec_tests_test.cpp
(+10 files in other folders)
